Fix the alignment of checkboxes on user role page per issue #279

--- a/src/Mvc/MvcTemplates/N2/Resources/Css/all.css
+++ b/src/Mvc/MvcTemplates/N2/Resources/Css/all.css
@@ -24,6 +24,12 @@ img{ border:none; }
 input[type="checkbox"],
 input[type="radio"] { float: left; margin: 4px; }
 
+.checkBoxList { margin-left: 100px; }
+.checkBoxList label { float: none !important;display: inline; }
+.checkBoxList input[type="checkbox"],
+.checkBoxList input[type="radio"] {float: none !important; margin: 4px; }
+
+
 /* toolbar */
 body.framed fieldset{
 }
